# texnopark-c

./: CMakeLists.txt  README.md  configure.sh
.github/workflows/: test.yml
include/: muscompos.h
include/testy/: TF-IDFMetric.h  TFMetric.h  arithmeticProgInArray.h  customer.h
src/: TF-IDFMetric.c  TFMetric.c  arithmeticProgInArray.c  customer.c  main.c  muscompos.c
test/: TF-IDFMetric.cpp  TFMetric.cpp  arithmeticProgInArray.cpp  customer.cpp  muscompos.cpp  widget.cpp
test/testFiles/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
